<resources>

    <string name="app_name">AndroidEatIt</string>
    <string name="slogan">
        No matter where you are: whether you are at home, or in the office, or at the beach - we will find you and we will feed you.</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="number_placeholder">0988123301</string>
    <string name="password_hint">Password</string>
    <string name="password_placeholder">1234</string>
    <string name="name_hint">Name</string>
    <string name="name_placeholder">Joe Smith</string>
    <string name="new_number_placeholder">0988123388</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="eat_it_logo_desc">Eat It Logo</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="sign_out">Sign Out</string>
    <string name="name_of_menu">Name of Menu</string>
    <string name="name_of_food">Name of Food</string>
    <string name="food_name">Food Name</string>
    <string name="price_holder">1,000</string>
    <string name="description">Description</string>
    <string name="total_text">Total:</string>
    <string name="place_order_text">Place Order</string>
    <string name="food_item_text">Food 01</string>
    <string name="order_id_placeholder">#11111111</string>
    <string name="status">Status</string>
    <string name="order_phone_placeholder">12345678</string>
    <string name="address_placeholder">Address</string>

</resources>
