<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/menu_home"
            android:iconTint="@android:color/white"/>

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/cart"
            android:iconTint="@android:color/white"/>

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/orders"
            android:iconTint="@android:color/white"/>

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out"
            android:iconTint="@android:color/white"/>

    </group>
</menu>
