<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logo_eat_it"
            android:contentDescription="@string/eat_it_logo_desc" />

        <TextView
            android:id="@+id/slogan"
            android:layout_width="207dp"
            android:layout_height="100dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSignUp"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/btnSignUp"
            android:text="@string/sign_up_btn"
            android:textColor="@android:color/white" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/btnSignActive"
            android:text="@string/sign_in_btn"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>