<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:text="@string/order_id_placeholder"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:text="@string/status"
                android:textAllCaps="true"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/order_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:text="@string/order_phone_placeholder"
                android:textAllCaps="true"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/order_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:text="@string/address_placeholder"
                android:textAllCaps="true"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>