<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/my_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPhone"
            android:hint="@string/phone_number_hint"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            app:met_baseColor="@android:color/white"
            android:inputType="phone"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editName"
            android:hint="@string/name_hint"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            app:met_baseColor="@android:color/white"
            android:inputType="text"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPassword"
            android:hint="@string/password_hint"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            app:met_baseColor="@android:color/white"
            android:inputType="textPassword"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        style="?android:buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_alignParentBottom="true"
        android:background="@color/btnSignUp"
        android:text="@string/sign_up_btn"
        android:textColor="@android:color/white" />

</RelativeLayout>